change link to actual page

--- a/lib/csc_worship_web/components/layouts/app.html.heex
+++ b/lib/csc_worship_web/components/layouts/app.html.heex
@@ -1,7 +1,7 @@
 <header class="px-4 sm:px-6 lg:px-8">
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="https://wiucscdotorg.wordpress.com/">
+      <a href="https://wiucsc.org/">
         <img src="https://pbs.twimg.com/profile_images/1290371892734558209/sfkQPHtq_400x400.jpg" width="36" />
       </a>
       <p class="bg-purple-500 text-white rounded-full px-2 font-medium leading-6">
